tests/expectations/compiler/dynamic_dispatch/dynamic_get_unsuffixed_key_fail.out
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:11:63
     |
  11 |     let _: u64 = _dynamic_get::[u64](prog, net, mapping_name, 1);
     |                                                               ^
     |
     = Consider using explicit type annotations.
